# django-simple-options

./: .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE  Pipfile  README.rst  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  tox.ini
.github/workflows/: workflow-pull-request.yml  workflow-push-main.yml  workflow-push-tags.yml
docs/: conf.py  index.rst
options/: __init__.py  admin.py  apps.py  constants.py  context_processors.py  helpers.py  managers.py  models.py  settings.py
options/management/commands/: export_options.py
options/migrations/: 0001_initial.py  0002_auto_20181002_0254.py  0003_auto_20190827_0605.py  0004_auto_20190829_0936.py  0005_option_help_text_useroption_help_text.py
options/rest_framework/: permissions.py  serializers.py  viewsets.py
tests/: factories.py  router.py  settings.py  test_options.py  test_settings.py  urls.py
