[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
dist-name = "django-simple-options"
module = "options"
author = "Marcos Gabarda"
author-email = "hey@marcosgabarda.com"
home-page = "https://github.com/marcosgabarda/django-simple-options"
classifiers = [
        "Environment :: Web Environment",
        "Framework :: Django",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Utilities",
]
requires = [
    "django"
 ]
description-file = "README.rst"
requires-python=">=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "factory_boy",
]
doc = ["sphinx"]

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True
envlist = py36,py37

[testenv]
deps =
    django
    pytest
    pytest-django
    pytest-cov
    factory_boy
commands = pytest
"""