[tool.poetry]
name = "django-simple-options"
version = "2.1.2"
description = "Simple app to add configuration options to a Django project."
readme = "README.rst"
authors = ["Marcos Gabarda <hey@marcosgabarda.com>"]
license = "MIT"
homepage = "https://github.com/marcosgabarda/django-simple-options"
packages = [
    { include = "options" },
]

classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
]
[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"
black = "^19.10b0"
factory_boy = "^2.12.0"
django-test-plus = "^1.4.0"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
