[tool.poetry]
name = "django-simple-options"
version = "2.3.0"
description = "Simple app to add configuration options to a Django project."
readme = "README.rst"
authors = ["Marcos Gabarda <hey@marcosgabarda.com>"]
license = "MIT"
homepage = "https://github.com/marcosgabarda/django-simple-options"
packages = [
    { include = "options" },
]

classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
]
[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.0.0"
djangorestframework = ">=3.11.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"
black = "^22.3.0"
factory_boy = "^2.12.0"
django-test-plus = "^1.4.0"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.0"
isort = "^5.10.1"
mypy = "^0.961"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
